<resources>
    <string name="app_name">中国卒中</string>
    <string name="wating_hint">请稍候…</string>
    <string name="network_connect_unavailable">网络好像不可用哦</string>
    <string name="network_connect_timeout">网络好像不给力呢，休息~休息一会儿~</string>
    <string name="network_status_not_good">网络状态不佳</string>
    <string name="network_error">当前网络不可用,请检查网络.</string>
    <string name="reload_page">重新加载</string>
    <string name="login_timeout_alert">会话已过期,请重新登录</string>
    <string name="exit_tip">再按一次退出应用</string>
    <string name="data_get_error">数据获取失败</string>
    <string name="back">返回</string>

    <!-- guide -->
    <string name="reject">拒绝</string>
    <string name="accept">接受</string>
    <string name="agreement_tip">点击接受即表示你同意接受以上《软件许可及服务协议》。</string>
    <string name="agreement_title">软件许可及服务协议</string>


    <!-- login-->
    <string name="login">Login in</string>
    <string name="member_not_null">会员号不能为空!</string>
    <string name="psd_not_null">密码不能为空!</string>
    <string name="psd_not_phone">密码输入有误，请重新输入</string>
    <string name="member_id">会员号</string>
    <string name="password">密码</string>

    <!-- main -->
    <string name="main">首页</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="mine">我</string>
    <string name="main_title">中国卒中协会</string>
    <string name="meeting_video">会议视频</string>
    <string name="mobile_check">移动查房</string>
    <string name="network_meeting">网络会议</string>
    <string name="base_train">基础培训</string>
    <string name="doc_browse">文件速览</string>
    <string name="international_online">国际在线</string>

    <!-- setting -->
    <string name="profile">个人信息</string>
    <string name="remind">提醒</string>
    <string name="help">帮助</string>
    <string name="software_update">软件更新</string>
    <string name="switch_account">切换帐号</string>
    <string name="logout">退出登录</string>
    <string name="software_intro">软件功能介绍</string>
    <string name="software_use_help">软件使用帮助</string>
    <string name="qrcode">二维码</string>

    <!-- video -->
    <string name="video">视频</string>
    <string name="meeting_sort">视频分类</string>
    <string name="video_list">视频列表</string>
    <string name="speaker">演讲人:%s</string>
    <string name="content">内容:</string>

    <!-- article -->
    <string name="detail">详情</string>
    <string name="subject">题目：《%s》</string>
    <string name="author">作者：%s</string>
    <string name="translator">译者：%s</string>
    <string name="time">时间：%s</string>
    <string name="source">来源：%s</string>
    <string name="intro">摘要：</string>
    <string name="view_detail">查看详情</string>
    <string name="download_fail">下载失败</string>

    <!-- info -->
    <string name="personal_info">个人信息</string>
    <string name="name">姓名</string>
    <string name="work_hospital">所在医院</string>
    <string name="job">职务</string>
    <string name="synopsis">简介</string>
    <string name="modify">修改</string>

    <!-- 消息详情 -->
    <string name="message_detail">消息详情</string>

    <!-- pull to refresh start -->
    <string name="header_hint_refresh_normal">下拉刷新...</string>
    <string name="header_hint_refresh_ready">松手立即更新...</string>
    <string name="header_hint_refresh_loading">正在加载...</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="footer_hint_load_normal">上拉加载更多</string>
    <string name="footer_hint_load_ready">松手立即加载更多...</string>
    <!-- pull to refresh end -->

    <!-- check update -->
    <string name="update">更新</string>
    <string name="new_version_tip">版本更新</string>
    <string name="update_content_tip">更新内容:\n</string>
    <string name="update_size_tip">更新包大小:</string>
    <string name="task_downloading">有其他任务正在下载，请稍后再试</string>
    <string name="download_fail_by_network">下载失败，请检查网络连接是否正常</string>
    <string name="download_fail_and_restart">下载文件错误，正在重新下载</string>
    <string name="download_fail_by_sdcard">下载失败，未检测到sd卡或sd卡容量不足</string>
    <string name="download_fail_retry">下载失败，请稍后重试</string>
    <string name="title_activity_webview">WebviewActivity</string>

    <string name="agreement">请仔细阅读本协议，”中国卒中”APP将依据以下条件和条款为您提供服务。\n\n

欢迎阅读”中国卒中”APP用户协议(下称“本协议”)。本协议阐述之条款和条件适用于您使用”中国卒中”APP所提供的各种工具和服务(下称“服务”)\n
\n1．服务条款的确认\n
“中国卒中”APP根据本服务条款及对该条款的修改向用户提供服务。本服务条款具有合同法上的法律效力。
如果您对协议的任何条款表示异议，您可以选择不注册，一旦您点选“注册”并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为”中国卒中”APP的注册会员。用户在使用”中国卒中”APP的同时，同意接受”中国卒中”APP会员服务提供的各类信息服务。\n
\n2．服务内容及修改、中断、终止\n
2.1 ”中国卒中”APP服务的具体内容由本平台根据实际情况提供，并对所提供之服务拥有最终解释权。
\n2.2 ”中国卒中”APP仅向其会员提供相关服务，与相关服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均由会员自行负担。
\n2.3 鉴于网络服务的特殊性，用户同意”中国卒中”APP有权不经事先通知，随时变更、中断或终止部分或全部的网络服务（包括收费网络服务）。”中国卒中”APP不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。
\n2.4 ”中国卒中”APP需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成网络服务（包括收费网络服务）在合理时间内的中断，”中国卒中”APP无需为此承担任何责任。”中国卒中”APP保留不经事先通知为维修保养、升级或其它目的暂停全部或部分的网络服务的权利。
\n2.5 用户明确同意其使用”中国卒中”APP网络服务所存在的风险将完全由其自己承担。
\n2.6 ”中国卒中”APP有权于任何时间暂时或永久修改或终止本服务（或其任何部分），而无论其通知与否，”中国卒中”APP对用户和任何第三人均无需承担任何责任。
\n2.7 您同意”中国卒中”APP得基于其自行之考虑，因任何理由，包含但不限于长时间未使用，或”中国卒中”APP认为您已经违反本服务协议的文字及精神，终止您的密码、帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本服务协议任何规定提供之服务，无需进行事先通知即可中断或终止，您承认并同意，”中国卒中”APP可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，或禁止继续使用前述文件或本服务。
此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，”中国卒中”APP对您或任何第三人均不承担任何责任。
\n\n3．会员帐号及密码
\n用户注册会员成功后，”中国卒中”APP将给予每个会员一个帐号及相应的密码，该帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。
\n因黑客行为或会员保管疏忽致使帐号、密码被他人非法使用的，本公司不承担任何责任。如您发现任何非法使用会员帐号或安全漏洞的情况，请立即与本公司联系。
\n\n4. 注册信息和隐私保护
\n4.1 ”中国卒中”APP帐号（即”中国卒中”APP用户ID）的所有权归”中国卒中”APP，用户完成注册申请手续后，获得”中国卒中”APP帐号的使用权。用户应提供及时、详尽及准确的个人资料，并不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将作为注册资料。如果因用户注册信息不真实而引起的问题及其产生的后果，”中国卒中”APP不负任何责任。
\n4.2 用户不得将其帐号、密码转让或出借予他人使用。如发现其帐号遭他人非法使用，应立即通知”中国卒中”APP。
\n4.3 ”中国卒中”APP不对外公开或向第三方提供单个用户的注册资料，除非：
\n• 事先获得用户的明确授权；
\n• 只有透露你的个人资料，才能提供你所要求的产品和服务；
\n• 根据有关的法律法规要求；
\n• 按照相关政府主管部门的要求；
\n• 为维护”中国卒中”APP的合法权益。
\n4.4 在您注册”中国卒中”APP帐户，使用”中国卒中”APP产品或服务，或访问”中国卒中”APP网页时，”中国卒中”APP会收集您的个人身份识别资料，并会将这些资料用于：改进为您提供的服务及网页内容。
\n\n5. 用户权责
\n5.1符合下列条件之一的个人、组织，才能申请成为”中国卒中”APP用户、使用本协议项下的服务：
\n5.1.1 年满十八周岁，并具有民事权利能力和民事行为能力的自然人；
\n5.1.2 未满十八周岁，但监护人（包括但不仅限于父母）予以书面同意的自然人；
\n5.1.3 根据中国法律、法规成立并合法存在的公司等企业法人、事业单位、社团组织和其他组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为用户的，其与本公司之间的协议自始无效，本公司一经发现，有权立即注销该用户。
\n5.2 用户有权按照”中国卒中”APP规定的程序和要求使用”中国卒中”APP向会员提供的各项网络服务，如果会员对该服务有异议，可以与”中国卒中”APP联系以便得到及时解决。
\n5.3 用户在申请使用”中国卒中”APP网络服务时，必须向”中国卒中”APP提供准确的个人资料，如个人资料有任何变动，必须及时更新。
\n5.4 用户须同意接受”中国卒中”APP通过电子邮件或其他方式向会员发送相关商业信息。
\n5.5 用户在使用”中国卒中”APP服务时，必须遵守中华人民共和国相关法律法规的规定，不得利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶
\n5.5.1 制作、复制、发布、传播或以其它方式传送含有下列内容之一的信息：
\n•反对宪法所确定的基本原则的
\n•危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
\n•损害国家荣誉和利益的；
\n•煽动民族仇恨、民族歧视、破坏民族团结的；
\n•破坏国家宗教政策，宣扬邪教和封建迷信的；
\n•散布谣言，扰乱社会秩序，破坏社会稳定的；
\n•散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
\n•侮辱或者诽谤他人，侵害他人合法权利的；
\n•煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；
\n•以非法民间组织名义活动的；
\n•含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；
\n•含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。
\n5.5.2 不得利用潮App服务从事以下活动：
\n•未经允许，进入计算机信息网络或者使用计算机信息网络资源；
\n•未经允许，对计算机信息网络功能进行删除、修改或者增加；
\n•未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加；
\n•故意制作、传播计算机病毒等破坏性程序；
\n•其他危害计算机信息网络安全的行为。
\n5.6 用户违反本协议或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，您同意赔偿”中国卒中”APP与合作公司、关联公司，并使之免受损害。对此，”中国卒中”APP有权视用户的行为性质，采取包括但不限于删除用户发布信息内容、暂停使用许可、终止服务、限制使用、回收”中国卒中”APP帐号、追究法律责任等措施。对恶意注册”中国卒中”APP帐号或利用”中国卒中”APP帐号进行违法活动、捣乱、骚扰、欺骗、其他用户以及其他违反本协议的行为，”中国卒中”APP有权回收其帐号。同时，本公司会视司法部门的要求，协助调查。
\n5.7 用户不得对”中国卒中”APP任何部分通过任何方式进行复制、拷贝、出售、转售或用于任何其它商业目的。
\n5.8 用户须对自己在使用”中国卒中”APP服务过程中的行为承担法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在”中国卒中”APP运营公司首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予”中国卒中”APP运营公司等额的赔偿。
\n\n6. 知识产权
\n6.1 ”中国卒中”APP网站及网站所使用的任何相关软件、程序、内容，包括但不限于作品、图片、档案、资料、网站构架、网站版面的安排、网页设计、经由本网站或广告商向用户呈现的广告或资讯，均由本公司或其它权利人依法享有相应的知识产权，包括但不限于著作权、商标权、专利权或其它专属权利等，受到相关法律的保护。未经本公司或权利人明示授权，用户保证不修改、出租、出借、出售、散布本网站及本网站所使用的上述任何资料和资源，或根据上述资料和资源制作成任何种类物品。
\n6.2 本公司授予用户不可转移及非专属的使用权，使用户可以通过单机计算机使用本网站的目标代码（以下简称“软件”），但用户不得且不得允许任何第三方，复制、修改、创作衍生作品、进行还原工程、反向组译，或以其它方式破译或试图破译源代码，或出售、转让“软件”或对“软件”进行再授权，或以其它方式移转“软件”之任何权利。用户同意不以任何方式修改“软件”，或使用修改后的“软件”。
\n6.3 ”中国卒中”APP有权在所有由平台提供的功能界面标注“此功能由”中国卒中”APP提供”等相关版权信息。。
\n6.4 用户不得经由非”中国卒中”APP所提供的界面使用本网站。
\n\n7. 其他
\n7.1 因不可抗力或者其他意外事件，使得本协议的履行不可能、不必要或者无意义的，双方均不承担责任。本协议所称之不可抗力意指不能预见、不能避免并不能克服的客观情况，包括但不限于战争、台风、水灾、火灾、雷击或地震、罢工、暴动、法定疾病、黑客攻击、网络病毒、电信部门技术管制、政府行为或任何其它自然或人为造成的灾难等客观情况。
\n7.2 本条款及其修订本的有效性、履行和与本条款及其修订本效力有关的所有事宜，将受中华人民共和国法律约束，任何争议仅适用中华人民共和国法律。
\n7.3 因本条款所引起的用户与本公司的任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此同意将纠纷或争议提交本公司住所地有管辖权的人民法院诉讼解决。
\n7.4用户正确提交注册程序所需的资料并确认本协议后，本协议在”中国卒中”APP与用户之间成立并生效。
\n7.5本协议生效前的注册用户只需要使用原用户名及密码登录”中国卒中”APP网站重新接受并确认本协议，即可继续使用”中国卒中”APP的服务。
\n7.6协议有效期：从用户同意本协议或使用”中国卒中”APP起至用户注销”中国卒中”APP服务止。
\n7.7本协议如无特殊规定，双方应当使用电子邮件方式就本协议相关事项进行联系。
\n7.8”中国卒中”APP各相关部门的电子邮箱以在”中国卒中”APP官方网站上注明的为准。
\n7.9使用”中国卒中”APP即表示接受”中国卒中”APP服务协议及其所有附件。s
\n7.10本协议的最终解释权归”中国卒中”APP所有。</string>

</resources>
