<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/academy_title_height"
        android:background="#0175bf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_19"
            android:text="@string/personal_info" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <ImageView
                android:id="@+id/im_avatar"
                android:layout_width="@dimen/academy_avatar_size"
                android:layout_height="@dimen/academy_avatar_size"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/academy_space_common"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/academy_space_medium"
                android:orientation="vertical"
                android:background="@color/white"
                >
                <RelativeLayout
                    style="@style/MineItemLayout"
                    >
                    <TextView
                        style="@style/MineTitleText"
                        android:text="@string/name"
                        />

                    <TextView
                        android:id="@+id/tv_name"
                        android:text="中国卒中学院"
                        style="@style/MineContentText"
                        />
                </RelativeLayout>

                <View style="@style/DividerViewStyle" />

                <RelativeLayout
                    style="@style/MineItemLayout"
                    android:visibility="gone"
                    >
                    <TextView
                        style="@style/MineTitleText"
                        android:text="@string/member_id"
                        />

                    <TextView
                        android:id="@+id/tv_member_id"
                        style="@style/MineContentText"
                        />
                </RelativeLayout>

                <View style="@style/DividerViewStyle"
                    android:visibility="gone"/>

                <RelativeLayout
                    style="@style/MineItemLayout"
                    android:visibility="gone"
                    >
                    <TextView
                        style="@style/MineTitleText"
                        android:text="@string/work_hospital"
                        />

                    <TextView
                        android:id="@+id/tv_hospital_modify"
                        style="@style/MineModifyText"
                        />
                    <TextView
                        android:id="@+id/tv_hospital"
                        android:layout_width="match_parent"
                        style="@style/MineContentText"
                        android:layout_toLeftOf="@id/tv_hospital_modify"
                        android:singleLine="true"
                        />
                </RelativeLayout>

                <View style="@style/DividerViewStyle"
                    android:visibility="gone"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingRight="10dp"
                    android:visibility="gone"
                    >
                    <TextView
                        style="@style/MineTitleText"
                        android:text="@string/job"
                        />

                    <TextView
                        android:id="@+id/tv_job_modify"
                        style="@style/MineModifyText"
                        />

                    <TextView
                        android:id="@+id/tv_job"
                        android:layout_width="match_parent"
                        style="@style/MineContentText"
                        android:layout_toLeftOf="@id/tv_job_modify"
                        />
                </RelativeLayout>

                <View style="@style/DividerViewStyle" />

                <RelativeLayout
                    style="@style/MineItemLayout"
                    >
                    <TextView
                        style="@style/MineTitleText"
                        android:text="@string/synopsis"
                        />

                    <TextView
                        android:id="@+id/tv_intro_modify"
                        style="@style/MineModifyText"
                        />
                </RelativeLayout>

                <View style="@style/DividerViewStyle" />

                <TextView
                    android:id="@+id/tv_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingRight="10dp"
                    android:text="中国卒中学院—打造一流的在线学习、在线交流平台。"
                    android:textColor="@color/text_dark_gray"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>