<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/ic_login_logo"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_member"
            />

        <EditText
            android:id="@+id/edit_member"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/academy_space_middle"
            android:textSize="@dimen/ts_13"
            android:textColor="@color/text_green"
            android:inputType="number"
            android:hint="@string/member_id"
            android:singleLine="true"
            android:background="@drawable/bg_input"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/academy_space_normal"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_psd"
            />

        <EditText
            android:id="@+id/edit_psd"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/academy_space_middle"
            android:textSize="@dimen/ts_12"
            android:textColor="@color/text_green"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/bg_input"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/academy_space_huge"
        android:background="@drawable/btn_login"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/login"
        android:clickable="true"
        android:onClick="onLoginClick"
        />
</LinearLayout>
